# awsp

./: Cargo.toml  README.md
docs/: homebrew.md
packaging/homebrew/: awsp-beta.rb
src/: aws.rs  fzf.rs  main.rs  onboarding.rs  palette.rs  picker.rs  shell.rs  state.rs
