[package]
name = "awsp"
version = "0.1.0-beta.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Switch AWS SSO profiles across shell sessions."
homepage = "https://github.com/nomadsre/awsp"
repository = "https://github.com/nomadsre/awsp"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
